# rsipstack

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.sipproxy  LICENSE  README.md
.github/workflows/: ci.yml
assets/: example.pcma  example.pcmu  index.html  ringback.pcma  ringback.pcmu
docs/: README.md
examples/: client.rs  proxy.rs
examples/client/: main.rs  play_file.rs  realtime.rs  stun.rs
examples/simple_connection/: main.rs
src/: endpoint.rs  error.rs  lib.rs  rsip_ext.rs  useragent.rs
src/dialog/: authenticate.rs  client_dialog.rs  dialog.rs  dialog_handle.rs  dialog_layer.rs  invitation.rs  mod.rs  registration.rs  server_dialog.rs
src/dialog/tests/: mod.rs  test_authenticate.rs  test_client_dialog.rs  test_dialog_layer.rs  test_dialog_states.rs  test_prack.rs  test_server_dialog.rs
src/transaction/: client.rs  client_invite.rs  client_non_invite.rs  endpoint.rs  key.rs  message.rs  mod.rs  server_invite.rs  server_non_invite.rs  test_transactions.rs  timer.rs  transaction.rs  types.rs
src/transaction/tests/: mod.rs  test_client.rs  test_endpoint.rs  test_server.rs  test_transaction_states.rs
src/transport/: channel.rs  connection.rs  mod.rs  sip_addr.rs  stream.rs  tcp.rs  tcp_listener.rs  tls.rs  transport.rs  transport_layer.rs  udp.rs  websocket.rs  ws.rs  ws_wasm.rs
src/transport/tests/: mod.rs  test_connection_lifecycle.rs  test_connection_management.rs  test_listener_api.rs  test_server_integration.rs  test_sipaddr.rs  test_stream_encoding.rs  test_udp.rs  test_via_received.rs  transport_tests.rs
src/useragent/: mod.rs
test/web/: package-lock.json  package.json
test/web/src/app/: layout.tsx
test/web/src/app/api/sip/test/: route.ts
test/web/src/app/home/: page.tsx
test/web/src/utils/sip/: sipclient.ts
tests/: lib.rs  test_endpoint.rs
