[package]
name = "rsipstack"
version = "0.2.37"
edition = "2021"
description = "SIP Stack Rust library for building SIP applications"
license = "MIT"
repository = "https://github.com/restsend/rsipstack"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "sipstack"]
authors = ["kui<kui@fourz.cn>"]
categories = ["network-programming", "multimedia"]


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench_ua"
path = "src/bin/bench_ua.rs"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.27"
rsip = { version = "0.4.0" }
tracing = "0.1.41"
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.45"
tokio-util = { version = "0.7.16", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
rand = { version = "0.9.2" }
get_if_addrs = "0.5.3"
rsip-dns = { version = "0.1.4", features = ["trust-dns"] }
bytes = "1.10.1"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.27.0", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls = "0.23.31"
clap = { version = "4.5.45", features = ["derive"] }
http = "1.3.1"

[features]
default = ["console_error_panic_hook", "rustls", "websocket"]
rustls = ["tokio-rustls", "rustls-pemfile", "webpki-roots"]
websocket = ["tokio-tungstenite"]
all-transports = ["rustls", "websocket"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["time", "sync", "macros", "io-util"] }
getrandom = { version = "0.3.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
dotenv = "0.15"
sdp-rs = "0.2.1"
rtp-rs = "0.6.0"
stun-rs = "0.1.11"
openai-api-rs = "6.0.8"
base64 = "0.22.1"
serde = "1.0.219"
serde_json = "1.0.142"
dasp = { version = "0.11", features = ["all"] }
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
hyper = "1.6.0"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"

[profile.release]
#strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
