[package]
name = "rsipstack"
version = "0.3.0"
edition = "2024"
description = "SIP Stack Rust library for building SIP applications"
license = "MIT"
repository = "https://github.com/restsend/rsipstack"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "sipstack"]
authors = ["kui<kui@fourz.cn>"]
categories = ["network-programming", "multimedia"]


[lib]
crate-type = ["cdylib", "rlib"]

# [[bin]]
# name = "bench_ua"
# path = "src/bin/bench_ua.rs"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.28"
rsip = { version = "0.4.0" }
thiserror = "2.0.17"
tracing = "0.1.41"
tokio-util = { version = "0.7.16", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
rand = { version = "0.9.2" }
get_if_addrs = "0.5.3"
rsip-dns = { version = "0.2.0", features = ["hickory-dns"], optional = true }
bytes = "1.10.1"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
webpki-roots = { version = "1.0.3", optional = true }
rustls = "0.23.32"
clap = { version = "4.5.47", features = ["derive"] }
http = "1.3.1"
nom = "8.0.0"

[features]
default = ["rustls", "websocket", "rsip-dns"]
rustls = ["tokio-rustls", "rustls-pemfile", "webpki-roots"]
websocket = ["tokio-tungstenite"]
rsip-dns = ["dep:rsip-dns"]
all-transports = ["rustls", "websocket"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["time", "sync", "macros", "io-util"] }
getrandom = { version = "0.3.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
dotenv = "0.15"
sdp-rs = "0.2.1"
rtp-rs = "0.6.0"
stun-rs = "0.1.11"
openai-api-rs = "7.0.0"
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.145"
dasp = { version = "0.11", features = ["all"] }
axum = { version = "0.8.6", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
hyper = "1.7.0"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"
