# 0.3.7 Merge upstream commits 4ab8a57..72f9426: get_running_transactions(), client re-INVITE, dialog key String, t4=5s
# 0.3.6 Merge upstream PR #55 + commit 650243e (commit 650243e): fix BYE when waiting ACK, re-INVITE handling
# 0.3.5 Merge upstream PRs #49, #52, #54 (commit 2ea7be3): fix duplicate Max-Forwards, ACK for domain contacts, optional call_id
# 0.3.4 Merge upstream PR #48 (commit f0eefaa): fix ACK for 487 responses
# 0.3.3 Merge upstream v0.2.93 (commit 26bfddc): route set updates from 200 OK/18x responses
[package]
name = "rsipstack"
version = "0.3.7"
edition = "2024"
description = "SIP Stack Rust library for building SIP applications"
license = "MIT"
repository = "https://github.com/restsend/rsipstack"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "sipstack"]
authors = ["kui<kui@fourz.cn>"]
categories = ["network-programming", "multimedia"]

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1.89"
rsip = { version = "0.4.0" }
thiserror = "2.0.17"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
rand = { version = "0.9.2" }
get_if_addrs = "0.5.3"
rsip-dns = { version = "0", features = ["hickory-dns"], optional = true }
bytes = "1.10.1"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls = "0.23.32"
nom = "8.0.0"

[features]
default = ["rustls", "websocket", "rsip-dns"]
rustls = ["tokio-rustls", "rustls-pemfile"]
websocket = ["tokio-tungstenite"]
rsip-dns = ["dep:rsip-dns"]
all-transports = ["rustls", "websocket"]
